Fix horizontal overflow on contact page

--- a/styles/pages/contact.scss
+++ b/styles/pages/contact.scss
@@ -24,6 +24,7 @@ body {
 .main-sec{
     height: 90vh;
     padding: 0;
+    width: 100%;
 }
 
 
